--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
             <span class="line line3"></span>
           </div>  
         <div class="logo">
-          <h1>Navbar</h1>
         </div>
         <div class="menu-items">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">blogs</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="#" style="color:White">Home</a></li>
+          <li><a href="#" style="color:White">about</a></li>
+          <li><a href="#" style="color:White">blogs</a></li>
+          <li><a href="#" style="color:White">portfolio</a></li>
+          <li><a href="#" style="color:White">contact</a></li>
         </div>
       </div>
     </div>
