--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- New Navbar -->
   <nav>
-    <div class="navbar">
+    <div class="navbar w3-top" >
       <div class="container nav-container">
           <input class="checkbox" type="checkbox" name="" id="" />
           <div class="hamburger-lines">
