--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
         <div class="menu-items">
           <li><a href="#" style="color:White">Home</a></li>
-          <li><a href="#" style="color:White">about</a></li>
-          <li><a href="#" style="color:White">blogs</a></li>
-          <li><a href="#" style="color:White">portfolio</a></li>
-          <li><a href="#" style="color:White">contact</a></li>
+          <li><a href="#" style="color:White">About me</a></li>
+          <li><a href="https://github.com/darren170999" style="color:White">Github</a></li>
+          <li><a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" style="color:White">Resume</a></li>
+          <li><a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" style="color:White">Contact</a></li>
         </div>
       </div>
     </div>
