New Page removed old page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="menu-items">
           <li><a href="#" style="color:White">Home</a></li>
-          <li><a href="#" style="color:White">About me</a></li>
+          <li><a href="aboutme.html" style="color:White">About me</a></li>
           <li><a href="https://github.com/darren170999" style="color:White">Github</a></li>
           <li><a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" style="color:White">Resume</a></li>
           <li><a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" style="color:White">Contact</a></li>
