--- a/aboutme.html
+++ b/aboutme.html
@@ -41,8 +41,8 @@
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
-      <div class="typewriter"> Hi I am Darren Soh
-
+      <div class="typewriter"> 
+        <h2>Hi I am Darren Soh. Sorry, I have very little time to work on this space. But i will do my best to fill it up soon...</h2>
       </div> 
 
       </div>
