--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
         <div class="logo">
         </div>
         <div class="menu-items">
-          <li><a href="#" style="color:White">Home</a></li>
+          <li><a href="index.html" style="color:White">Home</a></li>
           <li><a href="aboutme.html" style="color:White">About me</a></li>
           <li><a href="https://github.com/darren170999" style="color:White">Github</a></li>
           <li><a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" style="color:White">Resume</a></li>
