--- a/aboutme.html
+++ b/aboutme.html
@@ -44,12 +44,12 @@
 
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
-    <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
+    <!-- <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;"> -->
       <div class="typewriter"> 
         <h2>Hi I am Darren Soh. Sorry, I have very little time to work on this space...</h2>
       </div> 
 
-      </div>
+      <!-- </div> -->
     </div>
   </div>
 </div>
