--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
         <h1>
-            <a href="" class="typewrite" style="color:white" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+            <a href="" class="typewrite" style="color:white" data-period="2000" data-type='[ "Hi, I am Darren Soh.", "My aspirations include.", "Software Engineering.", "Algorithm Engineering." ]'>
             <span class="wrap"></span>
             </a>
         </h1>
