--- a/aboutme.html
+++ b/aboutme.html
@@ -50,6 +50,18 @@
             <span class="wrap"></span>
             </a>
         </h1>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="Images/avatar.png" alt="Avatar" style="width:300px;height:300px;">
+              </div>
+              <div class="flip-card-back">
+                <h1>Darren Soh</h1> 
+                <p>Software Engineer, Algorithm Engineer.</p> 
+                <p>Still writing code.</p>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
   </div>
