--- a/aboutme.html
+++ b/aboutme.html
@@ -44,6 +44,18 @@
 
 <div id="particles-js">
     <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="images/avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                    <h1>Darren Soh</h1> 
+                    <p>Software Engineer, Algorithm Engineer.</p> 
+                    <p>Still writing code.</p>
+                </div>
+            </div>
+        </div>
         <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
             <div class="flip-card">
                 <div class="flip-card-inner">
