--- a/aboutme.html
+++ b/aboutme.html
@@ -44,18 +44,6 @@
 
 <div id="particles-js">
     <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <img src="images/avatar.png" alt="Avatar" style="width:300px;height:300px;">
-                </div>
-                <div class="flip-card-back">
-                    <h1>Darren Soh</h1> 
-                    <p>Software Engineer, Algorithm Engineer.</p> 
-                    <p>Still writing code.</p>
-                </div>
-            </div>
-        </div>
         <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
             <div class="flip-card">
                 <div class="flip-card-inner">
@@ -63,9 +51,11 @@
                         <img src="images/avatar.png" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <h1>Darren Soh</h1> 
-                        <p>Software Engineer, Algorithm Engineer.</p> 
-                        <p>Still writing code.</p>
+                        <h1>
+                            <a href="" class="typewrite" style="color:white" data-period="2000" data-type='[ "Hi, I am Darren Soh.", "My aspirations include.", "Software Engineering.", "Algorithm Engineering." ]'>
+                            <span class="wrap"></span>
+                            </a>
+                        </h1>
                     </div>
                 </div>
             </div>
