--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
 <div id="particles-js">
     <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
         <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
-            <h1>Hover Over!</h1>
+            <h1 style="color:white;">Hover Over!</h1>
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
