--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="flip-card-back">
                         <h1>
-                            <a href="" class="typewrite" style="color:white" data-period="2000" data-type='[ "Hi, I am Darren Soh.", "My aspirations include.", "Software Engineering.", "Algorithm Engineering." ]'>
+                            <a href="" class="typewrite" style="color:white" data-period="2000" data-type='[ "Hi, I am Darren Soh.", "My aspirations include:", "Software Engineering.", "Algorithm Engineering." ]'>
                             <span class="wrap"></span>
                             </a>
                         </h1>
