--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
         </div>
         <!--#SWE-->
-        <div class="w3-container w3-content w3-padding-64">
+        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
           <h2 class="w3-wide w3-center" style="color:white">SOFTWARE ENGINEERING PROJECTS</h2>
           <p class="w3-opacity w3-center" style="color:white"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
       
@@ -172,7 +172,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Crossy Road</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
-                <p style="color:black">C# scripts to model movements. Models made with Blender. ML Enemy.(TensorFlow, UNITY3D, Blender, C#)</p>
+                <p style="color:black">C# scripts for movements. Models made with Blender. ML Enemy.(TensorFlow, UNITY3D, Blender, C#)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
