--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <h3 class="w3-wide w3-center" style="color:white">MACHINE LEARNING PROJECTS</h3>
           <p class="w3-opacity w3-center" style="color:white"><i>The all seeing eye of Coding</i></p><br>
       
-          <div class="w3-row-padding w3-padding-32">
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
             <div class="w3-third w3-margin-bottom">
               <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white" style="padding-bottom:20px;">
