--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
           </div>
         </div>
         <!--#SWE-->
-        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <!-- <div class="w3-row-padding w3-padding-32" style="margin:0 -16px"> -->
           <h2 class="w3-wide w3-center" style="color:white">SOFTWARE ENGINEERING PROJECTS</h2>
           <p class="w3-opacity w3-center" style="color:white"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
       
-          <div class="w3-row-padding w3-padding-32">
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
             <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
               <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white"  style="padding-bottom:20px;">
@@ -207,9 +207,9 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
         <!-- ML -->
-        <div class="w3-container w3-content w3-padding-64">
+        <!-- <div class="w3-container w3-content w3-padding-64"> -->
           <h3 class="w3-wide w3-center" style="color:white">MACHINE LEARNING PROJECTS</h3>
           <p class="w3-opacity w3-center" style="color:white"><i>The all seeing eye of Coding</i></p><br>
       
@@ -254,7 +254,7 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
         <!-- Contact -->
         <div class="w3-container w3-content w3-padding-64">
           <h4 class="w3-wide w3-center" style="color:white">CONTACT</h4>
