--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
         </div>
         <!--#SWE-->
-        <!-- <div class="w3-row-padding w3-padding-32" style="margin:0 -16px"> -->
+        <div class="w3-container w3-content w3-padding-64">
           <h2 class="w3-wide w3-center" style="color:white">SOFTWARE ENGINEERING PROJECTS</h2>
           <p class="w3-opacity w3-center" style="color:white"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
       
@@ -207,9 +207,9 @@
               </div>
             </div>
           </div>
-        <!-- </div> -->
+        </div>
         <!-- ML -->
-        <!-- <div class="w3-container w3-content w3-padding-64"> -->
+        <div class="w3-container w3-content w3-padding-64">
           <h3 class="w3-wide w3-center" style="color:white">MACHINE LEARNING PROJECTS</h3>
           <p class="w3-opacity w3-center" style="color:white"><i>The all seeing eye of Coding</i></p><br>
       
@@ -254,7 +254,7 @@
               </div>
             </div>
           </div>
-        <!-- </div> -->
+        </div>
         <!-- Contact -->
         <div class="w3-container w3-content w3-padding-64">
           <h4 class="w3-wide w3-center" style="color:white">CONTACT</h4>
