--- a/index.html
+++ b/index.html
@@ -111,35 +111,49 @@
         </div>
 
         <!--#HACK-->
-        <h2 class="w3-wide w3-center" style="color:white">HACKATHONS!</h2>
-        <p class="w3-opacity w3-center" style="color:white"><i>Won some lost many</i></p><br>
-    
-        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-          <div class="w3-third w3-margin-bottom">
-            <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-            <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p><b style="color:black">Shopee Code League 2022</b></p>
-              <p class="w3-opacity" style="color:black">Shopee</p>
-              <p style="color:black">Leetcode kind of Algorithm Challenge (was super difficult). Mandates: Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star. Longest common Subsequence. Awarded: Participation.</p>
-              <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+        <div class="w3-row-padding w3-padding-32"></div>
+          <h2 class="w3-wide w3-center" style="color:white">HACKATHONS!</h2>
+          <p class="w3-opacity w3-center" style="color:white"><i>Won some lost many</i></p><br>
+      
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b style="color:black">Shopee Code League 2022</b></p>
+                <p class="w3-opacity" style="color:black">Shopee</p>
+                <p style="color:black">Leetcode kind of Algorithm Challenge (was super difficult). Mandates: Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star. Longest common Subsequence. Awarded: Participation.</p>
+                <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b style="color:black">INTUITION</b></p>
+                <p class="w3-opacity" style="color:black">IEEE INTUITION v8.0 2022</p>
+                <p style="color:black">Issue MC for positive ART with Bot Father Telegram. Mandates: Google Cloud ML services, Google script API. Data Augmentation. Keras Image Processing. Awarded: First Place in Open Healthcare Category.</p>
+                <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b style="color:black">Today-I-Learned</b></p>
+                <p class="w3-opacity" style="color:black">DSTA, BRAINHACK 2021</p>
+                <p style="color:black">First Hackathon! Mandates: Data Exploratory Analysis. Data Cleaning. Model Tuning. OpenCV library. RESNET50 for Image Classification and Speech Classification. Awarded: Ninth Place in Open Category.</p>
+                <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
             </div>
           </div>
-          <div class="w3-third w3-margin-bottom">
-            <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-            <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p><b style="color:black">INTUITION</b></p>
-              <p class="w3-opacity" style="color:black">IEEE INTUITION v8.0 2022</p>
-              <p style="color:black">Issue MC for positive ART with Bot Father Telegram. Mandates: Google Cloud ML services, Google script API. Data Augmentation. Keras Image Processing. Awarded: First Place in Open Healthcare Category.</p>
-              <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
-            </div>
-          </div>
-          <div class="w3-third w3-margin-bottom">
-            <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-            <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p><b style="color:black">Today-I-Learned</b></p>
-              <p class="w3-opacity" style="color:black">DSTA, BRAINHACK 2021</p>
-              <p style="color:black">First Hackathon! Mandates: Data Exploratory Analysis. Data Cleaning. Model Tuning. OpenCV library. RESNET50 for Image Classification and Speech Classification. Awarded: Ninth Place in Open Category.</p>
-              <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+          <!-- Second Row of Hacks -->
+          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-third w3-margin-bottom">
+              <img src="/images/GrabHack.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
+                <p><b style="color:black">Grab HackForGood 2022</b></p>
+                <p class="w3-opacity" style="color:black">GRAB</p>
+                <p style="color:black">Did Frontend for Team. Developed a feature to help Grab users donate money and groceries using Grab's infrastructure. Mandates: DOM, React-bootstrap, ReactJs, Rest APIs. Awarded: 4th place, 500usd</p>
+                <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+              </div>
             </div>
           </div>
         </div>
