--- a/index.html
+++ b/index.html
@@ -81,14 +81,21 @@
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
-      <div class="typewriter">
-        <!-- <h1>
-          <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
-            <span class="wrap"></span>
-          </a>
-        </h1> -->
-
-      </div> 
+      <h1 style="color:white;">Hover Over!</h1>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <img src="images/avatar.png" alt="Avatar" style="width:300px;height:300px;">
+            </div>
+            <div class="flip-card-back">
+                <h1>
+                    <a href="" class="typewrite" style="color:rgb(0, 0, 0)" data-period="2000" data-type='[ "Hi, I am Darren Soh.", "My aspirations include:", "Software Engineering.", "Algorithm Engineering." ]'>
+                    <span class="wrap"></span>
+                    </a>
+                </h1>
+            </div>
+        </div>
+      </div>
 
       <!--#EXP-->
       <div class="w3-container w3-content w3-padding-64" >
