--- a/aboutme.html
+++ b/aboutme.html
@@ -43,6 +43,10 @@
 <div class="w3-black" id="aboutme"></div>
 
 <div id="particles-js">
+    <canvas class="particles-js-canvas-el" width="924" height="657" style="width:100%;height:100%">
+    </canvas>
+</div>
+<div id="root">
     <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
         <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
             <h1 style="color:white;">Hover Over!</h1>
@@ -63,7 +67,6 @@
         </div>
     </div>
 </div>
-
 <!-- 
 <br></br> -->
 <!-- #ART -->
