--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p><b style="color:black">Grab HackForGood 2022</b></p>
                 <p class="w3-opacity" style="color:black">GRAB</p>
                 <p style="color:black">Did Frontend for Team. Developed a feature to help Grab users donate money and groceries using Grab's infrastructure. Mandates: DOM, React-bootstrap, ReactJs, Rest APIs. Awarded: 4th place, 500usd</p>
-                <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
+                <a href="https://grabdonate-production.web.app/home" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
           </div>
