--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <br></br>
             <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%; height:86px;" class="w3-hover-opacity">
             <br></br>
-            <div class="w3-margin-top" style="color:white">Algorithm Engineer Intern </div>
+            <div class="w3-margin-top" style="color:white">Software Engineer Intern </div>
             <div class="w3-margin-bottom" style="color:white">(Aug 2022 - Jan 2023)</div>
           </div>
         </div>
