--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io_aboutme/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io_aboutme/favicon-16x16.png">
   <link rel="manifest" href="favicon_io_aboutme/site.webmanifest">
+  
   <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700display=swap" rel="stylesheet"> -->
 </head>
 <body>
@@ -31,7 +32,7 @@
           <li><a href="index.html" style="color:White">Home</a></li>
           <li><a href="aboutme.html" style="color:White">About me</a></li>
           <li><a href="https://github.com/darren170999" style="color:White">Github</a></li>
-          <li><a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" style="color:White">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1f1jsJDeCTgmBRJotWspbv5VG8yN3lTaz/view?usp=sharing" style="color:White">Resume</a></li>
           <li><a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" style="color:White">Contact</a></li>
         </div>
       </div>
@@ -46,6 +47,8 @@
     <canvas class="particles-js-canvas-el" width="924" height="657" style="width:100%;height:100%">
     </canvas>
 </div>
+<!-- <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="w3-hide-small" data-theme="dark" data-type="HORIZONTAL" data-vanity="darren-soh-170999dsohjh" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://sg.linkedin.com/in/darren-soh-170999dsohjh?trk=profile-badge">Darren Soh</a></div> -->
+              
 <div id="root">
     <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
         <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
@@ -86,6 +89,7 @@
 </footer>
 
 <!-- scripts -->
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 <script src="../particles.js"></script>
 <script src="js/app.js"></script>
 <script
